@@ -6,15 +6,15 @@ Even though the DFU
 
 ## Prerequisites
 
-- Java 21
+- Java 22
 - Apache Maven
 - 64-bit operating system (Windows, macOS, Linux)
 
 ## How to run
 
-### Install Java 21
+### Install Java 22
 
-Check that *Java 21* is installed:
+Check that *Java 22* is installed:
 
 ```shell
 $ java -version
@@ -58,7 +58,7 @@ Run the command below (adapting the file path depending on your specific board):
 
 ```shell
 $ mvn package
-$ java --enable-preview --enable-native-access=ALL-UNNAMED -jar target/stm_dfu-0.7.1.jar ../../test-devices/loopback-stm32/bin/blackpill-f401cc.bin
+$ java --enable-native-access=ALL-UNNAMED -jar target/stm_dfu-1.0.0-SNAPSHOT.jar ../../test-devices/loopback-stm32/bin/blackpill-f401cc.bin
 DFU device found with serial 35A737883336.
 Target memory segment: Internal Flash
 Erasing page at 0x8000000 (size 0x4000)
